# canvas-lms-api

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
canvas-lms-api-derive/: Cargo.toml
canvas-lms-api-derive/src/: lib.rs
docs/: DESIGN.md  RELEASING.md
examples/list-courses-and-assignments/: Cargo.toml  README.md
src/: client.rs  client_blocking.rs  error.rs  graphql.rs  http.rs  lib.rs  pagination.rs  params.rs  upload.rs
src/resources/: account.rs  account_calendar.rs  account_notification.rs  appointment_group.rs  assignment.rs  authentication_event.rs  authentication_provider.rs  blueprint.rs  bookmark.rs  calendar_event.rs  collaboration.rs  comm_message.rs  communication_channel.rs  content_export.rs  content_migration.rs  conversation.rs  course.rs  custom_gradebook_column.rs  discussion_topic.rs  enrollment.rs  enrollment_term.rs  eportfolio.rs  external_feed.rs  external_tool.rs  favorite.rs  feature.rs  file.rs  folder.rs  grade_change_log.rs  (+30 more)
tests/: account_methods_test.rs  account_test.rs  appointment_group_test.rs  assignment_test.rs  blocking_test.rs  calendar_event_test.rs  canvas_test.rs  collaboration_test.rs  content_export_test.rs  content_migration_test.rs  conversation_test.rs  course_extra_test.rs  course_methods_test.rs  course_test.rs  current_user_test.rs  custom_gradebook_columns_test.rs  discussion_topic_test.rs  enrollment_term_test.rs  enrollment_test.rs  eportfolio_test.rs  error_test.rs  external_tool_test.rs  feature_flag_test.rs  feature_test.rs  file_test.rs  folder_test.rs  grade_change_log_test.rs  grading_period_test.rs  grading_standard_test.rs  graphql_test.rs  group_test.rs  jwt_test.rs  login_test.rs  lti_resource_link_test.rs  module_test.rs  new_quizzes_test.rs  outcome_test.rs  page_test.rs  pagination_test.rs  planner_test.rs  (+15 more)
(+7 files in other folders)
