[workspace]
members = [".", "canvas-lms-api-derive", "examples/list-courses-and-assignments"]
resolver = "2"

[package]
name = "canvas-lms-api"
version = "1.0.0"
edition = "2021"
rust-version = "1.86"
description = "Rust client for the Instructure Canvas LMS REST API"
license = "MIT"
repository = "https://github.com/RobertConde/canvas-lms-api"
documentation = "https://docs.rs/canvas-lms-api"
keywords = ["canvas", "lms", "education", "api-client"]
categories = ["api-bindings", "web-programming::http-client"]
readme = "README.md"

[features]
default = ["async"]
async = ["dep:tokio", "dep:futures", "dep:async-stream"]
blocking = ["dep:tokio"]
new-quizzes = []
graphql = []
full = ["new-quizzes", "graphql"]

[dependencies]
canvas-lms-api-derive = { path = "./canvas-lms-api-derive", version = "0.1" }
reqwest        = { version = "0.12", features = ["json", "multipart"] }
tokio          = { version = "1", features = ["full"], optional = true }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
thiserror      = "2"
chrono         = { version = "0.4", features = ["serde"] }
url            = "2"
futures        = { version = "0.3", optional = true }
async-stream   = { version = "0.3", optional = true }
tracing        = "0.1"

[dev-dependencies]
tokio          = { version = "1", features = ["full"] }
wiremock       = "0.6"
serde_json     = "1"
